fixed an error cuz we are in windows idk somethin with line endings

--- a/Dockerfile.esp-idf
+++ b/Dockerfile.esp-idf
@@ -133,7 +133,8 @@ COPY scripts/esp-idf/mosquitto.conf /etc/mosquitto/mosquitto.conf
 
 # Generate the password file with default username and password
 COPY scripts/esp-idf/generate_mosquitto_password.sh /generate_mosquitto_password.sh
-RUN chmod +x /generate_mosquitto_password.sh && \
+RUN dos2unix /generate_mosquitto_password.sh && \
+    chmod +x /generate_mosquitto_password.sh && \
     /generate_mosquitto_password.sh ${MOSQUITTO_USERNAME} ${MOSQUITTO_PASSWORD}
 
 # Configure PID file
